# soundcloud-cli

./: .gitignore  README.md  pyproject.toml
sc_cli/: main.py  repl.py
sc_cli/core/: ascii_art.py  client.py  config.py  database.py  player.py
